--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,4 +14,10 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# easier copy-paste
+setw -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection # Begin selection in copy mode.
+bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle # Begin selection in copy mode.
+bind-key -T copy-mode-vi 'y' send -X copy-selection # Yank selection in copy mode.
+
 run-shell ~/git/tmux-resurrect/resurrect.tmux
