--- a/i3/config
+++ b/i3/config
@@ -132,6 +132,8 @@ bindsym $mod+a focus parent
 # keyboard layouts
 exec "setxkbmap -layout us,de,es"
 exec "setxkbmap -option 'grp:alt_shift_toggle'"
+bindsym ISO_Next_Group exec pkill -RTMIN+1 i3blocks
+
 
 # Start Applications
 bindsym $mod+shift+b exec qutebrowser
@@ -168,8 +170,12 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
+# bindings for caps and num
+bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
+bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
+
 # wallpaper
-exec "feh --bg-scale ~/.dotfiles/assets/wallpapers/grub-bg-monkey.jpg"
+#exec "feh --bg-scale ~/.dotfiles/assets/wallpapers/grub-bg-monkey.jpg"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -203,5 +209,7 @@ exec --no-startup-id xset r rate 200 35 # initial delay 300 ms, repeat 35 ms
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        #status_command i3status
+        status_command i3blocks -c ~/.config/i3/i3blocks.conf
+        tray_output primary
 }
