--- a/i3/config
+++ b/i3/config
@@ -35,7 +35,7 @@ new_window pixel $borders
 new_float pixel $borders
 
 # Hide borders
-hide_edge_borders none
+#hide_edge_borders none
 
 # Change borders
 bindsym $mod+u border none
@@ -44,7 +44,7 @@ bindsym $mod+n border normal
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Droid Sans 8
+font pango:Droid Sans 16
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
