--- a/i3/config
+++ b/i3/config
@@ -182,7 +182,7 @@ bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
 bindsym $mod+shift+x exec i3lock
 
 # wallpaper
-exec_always "feh --bg-max ~/.dotfiles/assets/wallpapers/grub-bg-monkey.jpg"
+exec_always "feh --bg-max /home/tsagrista/Pictures/wallpaper.jpg"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
