--- a/i3/config
+++ b/i3/config
@@ -143,9 +143,13 @@ bindsym ISO_Next_Group exec pkill -RTMIN+1 i3blocks
 bindsym $mod+shift+b exec qutebrowser
 bindsym $mod+shift+f exec i3-sensible-terminal -e "ranger"
 
+# WORKSPACES
+set $ws1 "Term"
+set $ws2 "Bwsr"
+
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
+bindsym $mod+1 workspace $ws1
+bindsym $mod+2 workspace $ws2
 bindsym $mod+3 workspace 3
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
@@ -156,8 +160,8 @@ bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
+bindsym $mod+Shift+1 move container to workspace $ws1
+bindsym $mod+Shift+2 move container to workspace $ws2
 bindsym $mod+Shift+3 move container to workspace 3
 bindsym $mod+Shift+4 move container to workspace 4
 bindsym $mod+Shift+5 move container to workspace 5
