--- a/i3/config
+++ b/i3/config
@@ -171,6 +171,11 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
+
+assign [class="qutebrowser"] $ws2
+assign [class="Thunderbird"] $ws2
+assign [class="Gnome-terminal"] $ws1
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -183,7 +188,7 @@ bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
 
 # lock
-bindsym $mod+shift+x exec i3lock
+bindsym $mod+shift+x exec i3lock-fancy
 
 
 # resize window (you can also use the mouse for that)
