--- a/i3/config
+++ b/i3/config
@@ -4,51 +4,13 @@
 
 set $mod Mod4
 
-# Color chooser
-# arch blue     #1793D1
-# debian red    #D70A53
-# manjaro green #2ECC71
-# plasma green  #18B092
-# matrix green  #00FF00
-# mint green    #5FAA24
-# numix         #C84433
-# ubuntu orange #F37320
-# vertex dark   #2C6FF0
-set $color1 #15967D
-set $color2 #666666
-
-# Set default desktop layout (default is tiling)
-# workspace_layout tabbed <stacking|tabbed>
-
 # Window border multiplier
 set $borders 2
-
-# Configure border style <normal|1pixel|pixel xx|none|pixel>
-#new_window pixel $borders
-#new_float pixel $borders
-
-# Hide borders
-#hide_edge_borders none
-
-# Change borders
-#bindsym $mod+u border none
-#bindsym $mod+y border pixel 2
-#bindsym $mod+n border normal
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:System San Francisco Display 13
 
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
-
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -63,10 +25,6 @@ bindsym $mod+Shift+q kill
 bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 
-##
-## MENU
-##
-#
 # start dmenu (a program launcher)
 bindsym $mod+shift+d exec dmenu_run
 #bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
@@ -119,9 +77,6 @@ bindsym $mod+space focus mode_toggle
 # focus the parent container
 bindsym $mod+a focus parent
 
-# focus the child container
-#bindsym $mod+d focus child
-
 # media player controls
 bindsym XF86AudioPrev exec playerctl previous
 bindsym XF86AudioNext exec playerctl next
@@ -138,10 +93,9 @@ exec "setxkbmap -layout us,de,es"
 exec "setxkbmap -option 'grp:alt_shift_toggle'"
 bindsym ISO_Next_Group exec pkill -RTMIN+1 i3blocks
 
-
 # Start Applications
 bindsym $mod+shift+b exec qutebrowser
-bindsym $mod+shift+f exec i3-sensible-terminal -e "ranger"
+bindsym $mod+shift+f exec gnome-terminal -e "ranger"
 
 # WORKSPACES
 set $ws1 "1:"
@@ -220,11 +174,30 @@ bindsym $mod+r mode "resize"
 # Repeat interval and delay
 exec --no-startup-id xset r rate 200 35 # initial delay 300 ms, repeat 35 ms
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+set $bg-color 	         #2f343f
+set $inactive-bg-color   #2f343f
+set $text-color          #f3f4f5
+set $inactive-text-color #676E7D
+set $urgent-bg-color     #E53935
+
+# window colors
+#                       border              background         text                 indicator
+client.focused          $bg-color           $bg-color          $text-color          #00ff00
+client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
+client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
+client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #00ff00
+
+# bar
 bar {
-        #status_command i3status
-        status_command i3blocks -c /home/tsagrista/.config/i3/i3blocks.conf
+  	status_command i3blocks -c /home/tsagrista/.config/i3/i3blocks.conf
+	colors {
+		background $bg-color
+	    	separator #757575
+		#                  border             background         text
+		focused_workspace  $bg-color          $bg-color          $text-color
+		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
+		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+	}
 }
 
 
