--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -129,8 +129,8 @@ signal=11
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-label=VOL
-#label=♪
+#label=VOL
+label=♪
 instance=Master
 #instance=PCM
 interval=once
