--- a/i3/config
+++ b/i3/config
@@ -175,7 +175,7 @@ bindsym $mod+r mode "resize"
 exec --no-startup-id xset r rate 200 35 # initial delay 300 ms, repeat 35 ms
 
 set $bg-color 	         #2f343f
-set $inactive-bg-color   #2f343f
+set $inactive-bg-color   #202830
 set $text-color          #f3f4f5
 set $inactive-text-color #676E7D
 set $urgent-bg-color     #E53935
@@ -189,7 +189,8 @@ client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color      
 
 # bar
 bar {
-  	status_command i3blocks -c /home/tsagrista/.config/i3/i3blocks.conf
+  	#status_command i3blocks -c /home/tsagrista/.config/i3/i3blocks.conf
+    status_command i3status
 	colors {
 		background $bg-color
 	    	separator #757575
