--- a/i3/config
+++ b/i3/config
@@ -223,5 +223,5 @@ exec_always /home/tsagrista/Scripts/current-randr.sh
 # Wallpaper
 exec_always "feh --bg-fill /home/tsagrista/Pictures/wallpaper.jpg"
 
-# Trackpad
-exec_always "xinput set-prop 12 'libinput Accel Speed' 0.6"
+# Trackpad  - Dell XPS13 trackpad speed
+exec_always "xinput set-prop 'DELL07E6:00 06CB:76AF Touchpad' 'libinput Accel Speed' 0.6"
