--- a/i3/config
+++ b/i3/config
@@ -16,7 +16,8 @@ set $borders 2
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:System San Francisco Display 13
+#font pango:System San Francisco Display 13
+font pango:System San Francisco Display, FontAwesome 13
 
 
 # Use Mouse+$mod to drag floating windows to their wanted position
