--- a/i3/config
+++ b/i3/config
@@ -95,7 +95,9 @@ bindsym XF86AudioPause exec playerctl pause
 # pulse audio controls
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
+bindsym $mod+F12 exec --no-startup-id pactl set-sink-volume 0 +5%
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5%
+bindsym $mod+F11 exec --no-startup-id pactl set-sink-volume 0 -5%
 
 # backlight - edit /usr/local/lib/brightnessctl/configuration.sh for step size
 bindsym XF86MonBrightnessUp exec brightness+
