--- a/rofi/config
+++ b/rofi/config
@@ -1,4 +1,4 @@
-rofi.theme: /usr/share/rofi/themes/android_notification.rasi
+rofi.theme: /home/tsagrista/.dotfiles/rofi/themes/sidetab.rasi
 rofi.width: 80
 rofi.heigh: 80
 rofi.padding: 400
