--- a/i3/config
+++ b/i3/config
@@ -225,8 +225,11 @@ exec_always /home/tsagrista/Scripts/current-randr.sh
 # Wallpaper
 exec_always "feh --bg-fill /home/tsagrista/Pictures/wallpaper.jpg"
 
-# Trackpad  - Dell XPS13 trackpad speed
+# Trackpad  - Dell XPS13 
+# trackpad speed
 exec_always "xinput set-prop 'DELL07E6:00 06CB:76AF Touchpad' 'libinput Accel Speed' 0.6"
+# tapping enabled
+exec_always "xinput set-prop 'DELL07E6:00 06CB:76AF Touchpad' 'libinput Tapping Enabled' 1"
 
 # Compositor
 exec compton
