--- a/i3/config
+++ b/i3/config
@@ -114,7 +114,7 @@ bindsym $mod+shift+f exec gnome-terminal -e "ranger"
 # WORKSPACES
 set $ws1 "1:"
 set $ws2 "2:"
-set $ws3 "3:"
+set $ws3 "3:"
 set $ws4 "4:"
 set $ws5 "5:"
 set $ws6 "6:"
