--- a/i3/config
+++ b/i3/config
@@ -17,7 +17,7 @@ set $borders 2
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:System San Francisco Display 13
-font pango:System San Francisco Display, FontAwesome 13
+font pango:System System San Francisco Display, FontAwesome 13
 
 
 # Use Mouse+$mod to drag floating windows to their wanted position
@@ -151,7 +151,7 @@ bindsym $mod+Shift+0 move container to workspace $ws0
 
 assign [class="qutebrowser"] $ws2
 assign [class="Thunderbird"] $ws2
-assign [class="Gnome-terminal"] $ws1
+assign [class="URxvt"] $ws1
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
