--- a/i3/config
+++ b/i3/config
@@ -234,6 +234,8 @@ bar {
 exec thunderbird
 exec megasync
 
+# Tray icons
+
 # Setup screens
 exec_always /home/tsagrista/Scripts/current-randr.sh
 
