--- a/i3/config
+++ b/i3/config
@@ -158,6 +158,8 @@ for_window [class="qt5ct"] floating enable sticky enable border normal
 for_window [class="Qtconfig-qt4"] floating enable sticky enable border normal
 for_window [class="Skype"] floating enable border normal
 for_window [class="Grub-customizer"] floating enable border normal
+for_window [title="Volume Control"] floating enable border normal
+for_window [class="Gsimplecal"] floating enable border normal
 
 
 # reload the configuration file
