--- a/i3/config
+++ b/i3/config
@@ -24,7 +24,7 @@ font pango:System System San Francisco Display, FontAwesome 11
 floating_modifier $mod
 
 # Start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec "$HOME/.config/i3/launch-shell"
 
 # kill focused window
 bindsym $mod+q kill
