--- a/i3/config
+++ b/i3/config
@@ -24,7 +24,7 @@ font pango:System System San Francisco Display, FontAwesome 11
 floating_modifier $mod
 
 # Start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec urxvt -cd "`xcwd`"
 
 # kill focused window
 bindsym $mod+q kill
@@ -106,7 +106,7 @@ bindsym XF86MonBrightnessDown exec brightness-
 
 # Start Applications
 bindsym $mod+shift+b exec qutebrowser
-bindsym $mod+shift+f exec i3-sensible-terminal -e "ranger"
+bindsym $mod+shift+f exec i3-sensible-terminal -e ranger $(xcwd)
 
 # WORKSPACES
 set $ws1 "1:"
