--- a/i3/config
+++ b/i3/config
@@ -255,6 +255,9 @@ exec_always "xinput set-prop 'DELL07E6:00 06CB:76AF Touchpad' 'libinput Accel Sp
 # tapping enabled
 exec_always "xinput set-prop 'DELL07E6:00 06CB:76AF Touchpad' 'libinput Tapping Enabled' 1"
 
+# network manager
+exec_always --no-startup-id nm-applet
+
 # Monitors daemon
 exec_always mons -a
 
