--- a/.env_arch
+++ b/.env_arch
@@ -1,4 +1,8 @@
 
+# Arch-specific environment variables
+export JAVA_HOME=/usr/lib/jvm/default
+
+# Updates and so on
 alias update='sudo pacman -Syu'
 alias updateaur='yay -Syu'
 alias install='sudo pacman -S'
