--- a/i3/config
+++ b/i3/config
@@ -116,14 +116,14 @@ bindsym $sup+g exec gnome-terminal --hide-menubar --working-directory "$HOME/git
 # WORKSPACES
 set $ws1 "1:"
 set $ws2 "2:"
-set $ws3 "3:"
+set $ws3 "3:"
 set $ws4 "4:"
 set $ws5 "5:"
 set $ws6 "6:"
 set $ws7 "7:"
 set $ws8 "8:"
 set $ws9 "9:"
-set $ws0 "10:"
+set $ws0 "10:"
 
 
 # switch to workspace
@@ -152,7 +152,7 @@ bindsym $mod+Shift+0 move container to workspace $ws0
 
 # default workspaces
 #assign [class="qutebrowser"] $ws2
-assign [class="Thunderbird"] $ws2
+assign [class="Thunderbird"] $ws3
 #assign [class="URxvt"] $ws1
 
 # default floating
