--- a/.env_global
+++ b/.env_global
@@ -24,6 +24,7 @@ export LD_LIBRARY_PATH=$VULKAN_SDK/lib
 export VK_LAYER_PATH=$VULKAN_SDK/etc/explicit_layer.d
 
 # Other utils
+export RANGER_RELOAD_RC=FALSE
 export TERMINAL=gnome-terminal
 export BROWSER=qutebrowser
 export EDITOR=vim
