--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -66,7 +66,7 @@ set vcs_backend_hg disabled
 set vcs_backend_bzr disabled
 
 # Use one of the supported image preview protocols
-set preview_images false
+set preview_images true
 
 # Set the preview image method. Supported methods:
 #
@@ -334,17 +334,23 @@ map ]     move_parent 1
 map [     move_parent -1
 map }     traverse
 
+# Movement
+
+map gd cd ~/Documents
+map td tab_new ~/Documents
+map md shell mv %%s ~/Documents
+map Yd shell cp %%s ~/Documents
+map gg cd ~/git
 map gh cd ~
 map ge cd /etc
 map gu cd /usr
-map gd cd /dev
 map gl cd -r .
 map gL cd -r %f
 map go cd /opt
 map gv cd /var
-map gm cd /media
+map gm cd ~/Music
 map gM cd /mnt
-map gs cd /srv
+map gs cd ~/git/gaiasky
 map gr cd /
 map gR eval fm.cd(ranger.RANGERDIR)
 map g/ cd /
@@ -354,6 +360,7 @@ map g? cd /usr/share/doc/ranger
 map E  edit
 map du shell -p du --max-depth=1 -h --apparent-size
 map dU shell -p du --max-depth=1 -h --apparent-size | sort -rh
+map df shell -p df
 map yp shell -f echo -n %d/%f | xsel -i; xsel -o | xsel -i -b
 map yd shell -f echo -n %d    | xsel -i; xsel -o | xsel -i -b
 map yn shell -f echo -n %f    | xsel -i; xsel -o | xsel -i -b
