--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -338,8 +338,9 @@ map }     traverse
 
 map gd cd ~/Documents
 map td tab_new ~/Documents
-map md shell mv %%s ~/Documents
-map Yd shell cp %%s ~/Documents
+map md shell mv %s ~/Documents
+map Yd shell cp %s ~/Documents
+map gw cd ~/.dotfiles/assets/wallpapers
 map gg cd ~/git
 map gh cd ~
 map ge cd /etc
@@ -461,6 +462,9 @@ map oT chain set sort=type;      set sort_reverse=True
 map oE chain set sort=extension; set sort_reverse=True
 
 map dc get_cumulative_size
+
+# Images
+map bg shell cp %f ~/Pictures/wallpaper.jpg && feh --bg-fill ~/Pictures/wallpaper.jpg
 
 # Settings
 map zc    set collapse_preview!
