--- a/i3/config
+++ b/i3/config
@@ -179,13 +179,13 @@ bindsym $mod+Shift-+r restart
 
 # Shut down, restart and locking
 bindsym $mod+Escape mode "$mode_system"
-set $mode_system (l)ock, (e)xit, l(o)gout, (s)uspend, (h)ibernate, (r)eboot, Shut(d)own
+set $mode_system (l)ock, sloc(k), (e)xit, l(o)gout, (s)uspend, (r)eboot, Shut(d)own
 mode "$mode_system" {
     bindsym l exec --no-startup-id i3lock-fancy, mode "default"
+    bindsym k exec --no-startup-id slock, mode "default"
     bindsym s exec --no-startup-id $HOME/.config/i3/i3exit suspend, mode "default"
     bindsym o exec --no-startup-id $HOME/.config/i3/i3exit logout, mode "default"
     bindsym e exec --no-startup-id $HOME/.config/i3/i3exit logout, mode "default"
-    bindsym h exec --no-startup-id $HOME/.config/i3/i3exit hibernate, mode "default"
     bindsym r exec --no-startup-id $HOME/.config/i3/i3exit reboot, mode "default"
     bindsym d exec --no-startup-id $HOME/.config/i3/i3exit shutdown, mode "default"
 
