--- a/i3/config
+++ b/i3/config
@@ -179,10 +179,9 @@ bindsym $mod+Shift-+r restart
 
 # Shut down, restart and locking
 bindsym $mod+Escape mode "$mode_system"
-set $mode_system (l)ock, sloc(k), (e)xit, l(o)gout, (s)uspend, (r)eboot, Shut(d)own
+set $mode_system (l)ock, (e)xit, l(o)gout, (s)uspend, (r)eboot, Shut(d)own
 mode "$mode_system" {
-    bindsym l exec --no-startup-id i3lock-fancy, mode "default"
-    bindsym k exec --no-startup-id slock, mode "default"
+    bindsym l exec --no-startup-id $HOME/.config/i3/i3exit lock, mode "default"
     bindsym s exec --no-startup-id $HOME/.config/i3/i3exit suspend, mode "default"
     bindsym o exec --no-startup-id $HOME/.config/i3/i3exit logout, mode "default"
     bindsym e exec --no-startup-id $HOME/.config/i3/i3exit logout, mode "default"
@@ -193,10 +192,6 @@ mode "$mode_system" {
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
-
-# bindings for caps and num
-bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
-bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
 
 # lock
 bindsym $mod+shift+x exec i3lock-fancy
