--- a/i3/config
+++ b/i3/config
@@ -8,11 +8,12 @@ set $mod Mod1
 set $sup Mod4
 
 # Gaps
-for_window [class="^.*"] border pixel 0
+#for_window [class="^.*"] border pixel 0 
+default_border pixel 0
+default_floating_border normal
+smart_borders on
 gaps inner 15
 gaps outer 0
-gaps inner all set 20
-gaps outer current plus 5
 
 # Colors
 set $bg-color 	         #305b66
@@ -21,18 +22,13 @@ set $text-color          #ffffff
 set $inactive-text-color #75758a
 set $urgent-bg-color     #E42343
 
-# Window border multiplier
-set $borders 2
-
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:System San Francisco Display 13
 font pango:System System San Francisco Display, FontAwesome 11
 
-
 # Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
-
+floating_modifier $mod 
 # Start a terminal
 bindsym $mod+Return exec gnome-terminal --hide-menubar --window-with-profile=NoScrollbar --working-directory "`$HOME/.config/i3/xcwd`"
 
