--- a/.env_global
+++ b/.env_global
@@ -25,7 +25,8 @@ export VK_LAYER_PATH=$VULKAN_SDK/etc/explicit_layer.d
 
 # Other utils
 export RANGER_RELOAD_RC=FALSE
-export TERMINAL=gnome-terminal
+export TERMINAL=urxvt
+export TERM=xterm
 export BROWSER=qutebrowser
 export EDITOR=vim
 GPG_TTY=$(tty)
