Add cli-visualizer conf

--- a/.env_global
+++ b/.env_global
@@ -26,7 +26,7 @@ export VK_LAYER_PATH=$VULKAN_SDK/etc/explicit_layer.d
 # Other utils
 export RANGER_RELOAD_RC=FALSE
 export TERMINAL=urxvt
-export TERM=xterm
+export TERM=rxvt-256color
 export BROWSER=qutebrowser
 export EDITOR=vim
 GPG_TTY=$(tty)
