--- a/vis/config
+++ b/vis/config
@@ -89,4 +89,4 @@ visualizer.spectrum.smoothing.mode=sgs
 #colors.override.terminal=false
 
 ##Specifies the color scheme. The color scheme must be in ~/.config/vis/colors/ directory. The default scheme is "colors".
-colors.scheme=spectrum
+colors.scheme=spectrum-inv
