Added wal to ranger

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -465,6 +465,7 @@ map dc get_cumulative_size
 
 # Images
 map bg shell cp %f ~/Pictures/wallpaper.jpg && feh --bg-fill ~/Pictures/wallpaper.jpg
+map bw shell ~/.local/bin/wal -a 80 -q -i %f
 
 # Settings
 map zc    set collapse_preview!
