wal settings for ranger, startup, etc.

--- a/.env_global
+++ b/.env_global
@@ -70,6 +70,15 @@ alias bohr='ssh -tX tsagrista@bohr.iwr.uni-heidelberg.de'
 # ENVIRONMENT INIT
 #
 
+# Apply wal theme, if any
+if [ -f ~/.cache/wal/sequences ]; then
+    (cat ~/.cache/wal/sequences &)
+fi
+
+if [ -f ~/.cache/wal/colors-tty.sh ]; then
+    source ~/.cache/wal/colors-tty.sh
+fi
+
 # Add key to keychain
 eval $(keychain --eval /home/tsagrista/.ssh/id_rsa)
 
