--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -465,7 +465,7 @@ map dc get_cumulative_size
 
 # Images
 map bg shell cp %f ~/Pictures/wallpaper.jpg && feh --bg-fill ~/Pictures/wallpaper.jpg
-map bw shell ~/.local/bin/wal -a 80 -q -i %f
+map bw shell cp %f ~/Pictures/wallpaper.jpg && ~/.local/bin/wal -c && ~/.local/bin/wal -a 85 -i ~/Pictures/wallpaper.jpg
 
 # Settings
 map zc    set collapse_preview!
