--- a/i3/config
+++ b/i3/config
@@ -110,7 +110,7 @@ bindsym XF86MonBrightnessDown exec brightness-
 # Start Applications
 bindsym $sup+b exec qutebrowser
 bindsym $sup+t exec thunderbird
-bindsym $sup+f exec urxvt -cd "`$HOME/.config/i3/xcwd`" -e ranger
+bindsym $sup+f exec urxvt -cd "`$HOME/.config/i3/xcwd`" -e ranger --cmd="shell ~/.local/bin/wal -R"
 bindsym $sup+v exec vlc
 bindsym $sup+g exec urxvt -cd "$HOME/git/gaiasky"
 
@@ -339,3 +339,8 @@ exec_always mons -a
 #
 
 exec compton
+
+#
+# WAL THEME
+#
+wal -R
